# CPP_Remote_Screen_Capture

./: CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
client/: CMakeLists.txt
client/src/: main.cc
client/src/client/: client.cc  client.h
client/src/client/screen_grabber/: screen_grabber.cc  screen_grabber.h
client/src/client/screen_grabber/unique_display/: unique_display.cc  unique_display.h
client/src/client/screen_grabber/unique_x_image/: unique_x_image.cc  unique_x_image.h
client/src/client/unique_fd/: unique_fd.h
common/: CMakeLists.txt
common/include/: input_parser.h  logger.h  resource_factory.h  unique_resource.h
common/src/: input_parser.cc  logger.cc  resource_factory.cc
server/: CMakeLists.txt
server/src/: main.cc
server/src/server/: server.cc  server.h
server/src/server/session/: session.cc  session.h
server/src/server/unique_fd/: unique_fd.h
